--- a/02/quiz-2.html
+++ b/02/quiz-2.html
@@ -13,7 +13,9 @@
 	</style>
 </head>
 <body>
-	<!-- 화면에 "Hello, Javascript!" 표시하기 -->
+	<script>
+	document.write("Hello, Javascript!")
+	</script>
 
 </body>
 </html>
