--- a/03/age.html
+++ b/03/age.html
@@ -10,6 +10,14 @@
 <body>	
 	<button class="btn" onclick="calc()">나이 계산하기</button>
 	<div id="result" class="show">(결과 값 표시)</div>
-
+	<script>
+		function calc() {
+			var currentYear = 2021; // 올해 연도를 저장하는 변수
+			var birthYear = prompt("태어난 연도를 입력하세요.", "YYYY"); // 태어난 연도를 저장하는 변수
+			var age = currentYear - birthYear + 1; // 계산한 나이를 저장할 변수
+			// 올해 연도에서 태어난 연도를 뺀 다음 1을 더하여 age에 저장
+			document.querySelector("#result").innerHTML = "당신의 나이는 " + age + "세입니다.";
+		}
+	</script>
 </body>
 </html>
