--- a/03/diy-age.html
+++ b/03/diy-age.html
@@ -10,5 +10,12 @@
 <body>	
 	<button class="btn" onclick="calc()">나이 계산하기</button>
 	<div id="result" class="show">(결과 값 표시)</div> 
+	<script>
+		var year = 2021;
+		var birth = prompt("태어난 연도를 입력하시오.");
+		var age = year - birth + 1;
+
+		alert("현재 나이는 " + age + "세 입니다.")		
+	</script>
 </body>
 </html>
