--- a/03/diy-bargain.html
+++ b/03/diy-bargain.html
@@ -25,5 +25,17 @@
 		</ul>
 		<div id="showResult"></div>	
 	</div>	
+	<script>
+		function showPrice() {
+			var originPrice = document.querySelector('#oPrice').value;
+			var rate = document.querySelector('#rate').value;
+
+			if (originPrice > 0 && rate > 0) {
+				var savedPrice = originPrice * (rate / 100);
+				var resultPrice = originPrice - savedPrice;
+			}
+			document.querySelector('#showResult').innerHTML = "상품의 원래 가격은 " + originPrice + "이고, 할인된 가격은 " + resultPrice + "입니다. 총 " + savedPrice + "원을 절약 했습니다."
+		}
+		</script>
 </body>
 </html>
